output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1088.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1088.py", line 81
    /* else: */ durations[7]-1)))))))
    ^
SyntaxError: invalid syntax
